更新uni-app开发事项

--- a/source/_posts/uni-app/1.uni-app之思考与举措.md
+++ b/source/_posts/uni-app/1.uni-app之思考与举措.md
@@ -1,14 +1,14 @@
 ---
-title: 1.uni-app跨端开发之跨端开发新时代的思考与举措
+title: 1.uni-app之思考与举措
 tags: [uni-app,跨端开发]
-slug: bjg2zsidz0a
+slug: bjg2z0a
 keywords: uni-app,多端同构,多端开发技巧,跨端开发
 date: 2024-10-26 17:17:36
 ---
 
-## 新时代
+## 背景
 
-跨端框架的出现,前端的浏览器兼容过渡到了客户端平台兼容的新时代.
+跨端框架的出现,前端的浏览器兼容过渡到了客户端平台兼容的新背景.
 
 对于初创公司而言,这种框架可以快速试错与降低人力与时间成本.
 
@@ -24,7 +24,7 @@ date: 2024-10-26 17:17:36
 
 对于跨端技术而言,目前相对完善且符合公司业务的技术框架可以选择
 
-1. Taro
+1. Taro[内置多语法形式]
 
 2. uni-app
 
