--- a/source/_posts/uni-app/2.uni-app之依赖管理.md
+++ b/source/_posts/uni-app/2.uni-app之依赖管理.md
@@ -1,7 +1,7 @@
 ---
-title: 2.uni-app跨端开发之依赖管理问题
+title: 2.uni-app之依赖管理
 tags: [uni-app,跨端开发]
-slug: h8gasmt9u5c
+slug: h8gas5c
 keywords: uni-app,多端同构,多端开发技巧,跨端开发
 date: 2024-10-26 17:17:36
 ---
