--- a/source/_posts/uni-app/3.uni-app之多模块管理(上).md
+++ b/source/_posts/uni-app/3.uni-app之多模块管理(上).md
@@ -1,14 +1,12 @@
 ---
-title: 3.uni-app跨端开发之多业务模块管理(上)
+title: 3.uni-app之多模块管理(上)
 tags: [uni-app,跨端开发]
-slug: w650d9ok34i
+slug: w65034i
 keywords: uni-app,多端同构,多端开发技巧,跨端开发
 date: 2024-10-26 17:18:36
 ---
 
-我们团队一开始开发的uni-app项目是在一个项目里面开发维护，也即是所有的业务模块都在这个
-
-里面,时间久了这个项目就变成了一个巨无霸项目.
+我们团队uni-app项目是在一个项目里面开发维护里面,时间久了这个项目就变成了一个巨无霸项目.
 
 再加上后来基于uni-app开发的app项目,为了共存和协同.
 
@@ -30,7 +28,7 @@ date: 2024-10-26 17:18:36
 
 [uni-app跨端开发之依赖管理](https://codcer.github.io/2024/10/26/uni-app/2.uni-app跨端开发之依赖管理问题/)
 
-所以我的主工程的依赖与业务模块的依赖是保持一致的.
+所以主工程的依赖与业务模块的依赖是保持一致的.
 
 ### 使用npm管理业务模块
 
@@ -50,7 +48,7 @@ date: 2024-10-26 17:18:36
     "name": "base",
     "version": "0.0.x",
     "scripts": {
-        "build":"构建相关操作"
+        "build":"构建相关命令"
     },
     "dependencies": {
         "公共包": "1.0.0",
@@ -64,7 +62,7 @@ date: 2024-10-26 17:18:36
 
 #### 业务模块的package.json
 
-业务模块添加了postinstall,在使用npm拉取业务模块成功之后,业务模块会在 `node_modules` 中构建自己的项目,提供主工程的`page.json`使用
+业务模块添加了postinstall,在使用npm拉取业务模块成功之后,业务模块会在 `node_modules` 中构建自己的项目,提供给主工程的`page.json`使用
 
 ```json
 
@@ -73,7 +71,7 @@ date: 2024-10-26 17:18:36
     "version": "0.0.1",
     "main": "main.js", 
     "scripts": {
-        "build":"构建相关操作",
+        "build":"构建相关命令",
         "postinstall":"npm run build"
     },
     "dependencies": {
