--- a/source/_posts/uni-app/4.uni-app之多模块管理(中).md
+++ b/source/_posts/uni-app/4.uni-app之多模块管理(中).md
@@ -1,7 +1,7 @@
 ---
-title: 4.uni-app跨端开发之多业务模块管理(中)
+title: 4.uni-app之多模块管理(中)
 tags: [uni-app,跨端开发]
-slug: j4ylxksvfa8
+slug: j4ksvfa8
 keywords: uni-app,多端同构,多端开发技巧,跨端开发
 date: 2024-10-26 17:18:39
 ---
@@ -22,17 +22,17 @@ module.exports = {
     "Module1": {
         "url": "http://xxx1.git",
         "moduleName": [
-            "模块名称"
+            "模块名1"
         ],
-        "branch": "develop",
+        "branch": "dev",
         "type": "uni-app"
     },
     "Module2": {
         "url": "http://xxx2.git",
         "moduleName": [
-            "模块名称"
+            "模块名2"
         ],
-        "branch": "develop",
+        "branch": "dev",
         "type": "uni-app"
     }
 }
@@ -63,11 +63,11 @@ module.exports = {
     const packageData = fse.readJsonSync('./packages.json');
 
     if (packageData.scripts.preinstall) {
-    spawn.sync('npm',['run','preinstall']);
+        spawn.sync('npm',['run','preinstall']);
     }
 
     if (packageData.scripts.postinstall) {
-    spawn.sync('npm',['run','postinstall']);
+        spawn.sync('npm',['run','postinstall']);
     }
 
 ```
@@ -85,8 +85,8 @@ module.exports = {
 ### 使用配置文件自动生成pages.json
 
 上面我们提到,我们有一个管理业务模块的配置文件.
-有了这个东西,我们就可以根据配置文件的内容自动生成pages.json的内容了.
+有了这个东西,我们就可以根据配置文件的内容动态生成pages.json的内容了.
 
 ## 尾巴
 
-本篇介绍了如何解除npm的限制,快速初始化项目的业务模块.
+本篇介绍如何解除npm的限制,快速初始化项目的业务模块.
