--- a/source/_posts/uni-app/6.uni-app之tui支持vue3写法.md
+++ b/source/_posts/uni-app/6.uni-app之tui支持vue3写法.md
@@ -1,7 +1,7 @@
 ---
-title: 6.uni-app跨端开发之让uview-ui支持vue3写法
+title: 6.uni-app之tui支持vue3写法
 tags: [uni-app,跨端开发]
-slug: wwfw2u086as
+slug: wwu086as
 keywords: uni-app,多端同构,多端开发技巧,跨端开发
 date: 2024-10-26 17:20:36
 ---
@@ -9,8 +9,8 @@ date: 2024-10-26 17:20:36
 
 ## uni-app UI 不支持vue3的窘境
 
-uni-app UI 社区上一直没有比较好的兼容vue3语法的ui库，经过调研后，发现有个个人班的`vk-uview-ui`这个库，
-因此基于此，我们下沉我们的tui来适配vue3风格【自己动手丰衣足食 🤒】。
+uni-app UI 社区上一直没有比较好的兼容vue3语法的ui库，经过调研后，发现有个个人版的`vk-uview-ui`这个库，
+因此基于此，我们下沉的tui来适配vue3风格【自己动手丰衣足食 🤒】。
 
 ### 组件库打包与发布
 
