--- a/source/_posts/uni-app/7.使用uni-app开发顺序建议.md
+++ b/source/_posts/uni-app/7.使用uni-app开发顺序建议.md
@@ -1,7 +1,7 @@
 ---
-title: 7.使用uni-app开发各端的顺序建议
+title: 7.使用uni-app开发顺序建议
 tags: [uni-app,跨端开发]
-slug: hm5dl5tsw3k
+slug: hm5dsw3k
 keywords: uni-app,多端同构,多端开发技巧,跨端开发
 date: 2024-10-26 17:21:36
 ---
