--- a/themes/cactus-dark/languages/zh-CN.yml
+++ b/themes/cactus-dark/languages/zh-CN.yml
@@ -14,10 +14,10 @@ index:
   find_me_on: Follow me on
   enum_comma: ' '
   enum_and: ' '
-  articles: 文章
-  projects: 项目
-  topics: 标签
-  most_recent: 最新的文章
+  articles: Archives
+  projects: Projects
+  topics: Tag
+  most_recent: Latest
 
 post:
   desktop:
